--- a/index.html
+++ b/index.html
@@ -1,94 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>1# COMPONENTE</h1>
-    <section class="contenedor">
-        <details class="acordeon">
-            <summary class="titulo">titulo1</summary>
-            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-        <details class="acordeon">
-            <summary class="titulo">titulo2</summary>
-            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-        <details class="acordeon">
-            <summary class="titulo">titulo3</summary>
-            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-        <details class="acordeon">
-            <summary class="titulo">titulo4</summary>
-            <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-    </section>
-    <section class="contenedor2">
-        <details class="acordeon2">
-            <summary class="titulo2">titulo1</summary>
-            <p class="texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-        <details class="acordeon2">
-            <summary class="titulo2">titulo2</summary>
-            <p class="texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-        <details class="acordeon2">
-            <summary class="titulo2">titulo3</summary>
-            <p class="texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-        <details class="acordeon2">
-            <summary class="titulo2">titulo4</summary>
-            <p class="texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-    </section>
-    <section class="contenedor3">
-        <details class="acordeon3">
-            <summary class="titulo3">titulo1</summary>
-            <p class="texto3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-        <details class="acordeon3">
-            <summary class="titulo3">titulo2</summary>
-            <p class="texto3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-        <details class="acordeon3">
-            <summary class="titulo3">titulo3</summary>
-            <p class="texto3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-        <details class="acordeon3">
-            <summary class="titulo3">titulo4</summary>
-            <p class="texto3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-    </section>
-    <section class="contenedor4">
-        <details class="acordeon4">
-            <summary class="titulo4">titulo1</summary>
-            <p class="texto4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-        <details class="acordeon4">
-            <summary class="titulo4">titulo2</summary>
-            <p class="texto4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-        <details class="acordeon4">
-            <summary class="titulo4">titulo3</summary>
-            <p class="texto4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-        <details class="acordeon4">
-            <summary class="titulo4">titulo4</summary>
-            <p class="texto4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-        </details>
-    </section>
-    <br>
-    <br>
-    <br>
-    <h1>2# COMPONENTE</h1>
-    <ul class="lista_con">
-        <li class="lista1">lista1</li>
-        <li class="lista2">lista1</li>
-        <li class="lista3">lista1</li>
-        <li class="lista4">lista1</li>
-    </ul>
+  <h1>1# COMPONENTE</h1>
+  <section>
+    <details class="acordeon">
+      <summary class="titulo">titulo1</summary>
+      <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <details class="acordeon">
+      <summary class="titulo">titulo2</summary>
+      <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <details class="acordeon">
+      <summary class="titulo">titulo3</summary>
+      <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <details class="acordeon">
+      <summary class="titulo">titulo4</summary>
+      <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+  </section>
+  <section>
+    <details class="acordeon2">
+      <summary class="titulo2">titulo1</summary>
+      <p class="texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <details class="acordeon2">
+      <summary class="titulo2">titulo2</summary>
+      <p class="texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <details class="acordeon2">
+      <summary class="titulo2">titulo3</summary>
+      <p class="texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <details class="acordeon2">
+      <summary class="titulo2">titulo4</summary>
+      <p class="texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+  </section>
+  <section>
+    <details class="acordeon3">
+      <summary class="titulo3">titulo1</summary>
+      <p class="texto3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <details class="acordeon3">
+      <summary class="titulo3">titulo2</summary>
+      <p class="texto3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <details class="acordeon3">
+      <summary class="titulo3">titulo3</summary>
+      <p class="texto3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <details class="acordeon3">
+      <summary class="titulo3">titulo4</summary>
+      <p class="texto3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+  </section>
+  <section>
+    <details class="acordeon4">
+      <summary class="titulo4">titulo1</summary>
+      <p class="texto4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <details class="acordeon4">
+      <summary class="titulo4">titulo2</summary>
+      <p class="texto4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <details class="acordeon4">
+      <summary class="titulo4">titulo3</summary>
+      <p class="texto4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <details class="acordeon4">
+      <summary class="titulo4">titulo4</summary>
+      <p class="texto4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+  </section>
+  <br>
+  <br>
+  <br>
+  <h1>2# COMPONENTE</h1>
+  <div class="contenedor">
+    <div class="card">
+      <img src="img/amogus 2.gif" alt="pato" class="card__img">
+      <h1 class="card__titulo">Carta1</h1>
+      <p class="card__texto">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, corporis.
+      </p>
+      <a href="a" class="boton boton--negro">Info</a>
+    </div>
+    <div class="card">
+      <img src="img/pato.gif" alt="pato" class="card__img">
+      <h1 class="card__titulo">Carta2</h1>
+      <p class="card__texto">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, corporis.
+      </p>
+      <a href="a" class="boton boton--rojo">Info</a>
+    </div>
+    <div class="card">
+      <img src="img/banana.gif" alt="pato" class="card__img">
+      <h1 class="card__titulo">Carta3</h1>
+      <p class="card__texto">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, corporis.
+      </p>
+      <a href="a" class="boton boton--verde">Info</a>
+    </div>
+    <div class="card">
+      <img src="img/maica.gif" alt="pato" class="card__img">
+      <h1 class="card__titulo">Carta4</h1>
+      <p class="card__texto">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, corporis.
+      </p>
+      <a href="a" class="boton boton--azul">Info</a>
+    </div>
+  </div>
 </body>
+
 </html>
