--- a/index.html
+++ b/index.html
@@ -82,6 +82,17 @@
       <p class="texto4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
     </details>
   </section>
+  <section class="acordeon">
+    <details class="acordeon__item">
+      <summary class="acordeon__titulo acordeon__titulo--special">titulo1</summary>
+      <p class="acordeon__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <details class="acordeon__item">
+      <summary class="acordeon__titulo">titulo2</summary>
+      <p class="acordeon__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <!-- Otros elementos -->
+  </section>
   <br>
   <br>
   <br>
@@ -109,16 +120,23 @@
       <p class="card__texto">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, corporis.
       </p>
-      <a href="a" class="boton boton--verde">Info</a>
+      <a href="a" class="boton boton--sombra">Info</a>
     </div>
     <div class="card">
       <img src="img/maica.gif" alt="pato" class="card__img">
-      <h1 class="card__titulo">Carta4</h1>
+      <h1 class="card__titulo-">Carta4</h1>
       <p class="card__texto">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, corporis.
       </p>
       <a href="a" class="boton boton--azul">Info</a>
     </div>
+  </div>
+  <h1>3# COMPONENTE</h1>
+  <div class="lista">
+    <button class="lista__primera">1</button>
+    <button class="lista__segunda">2</button>
+    <button class="lista__tercera">3</button>
+    <button class="lista__cuarta">4</button>
   </div>
 </body>
 
