--- a/index.html
+++ b/index.html
@@ -10,88 +10,23 @@
 
 <body>
   <h1>1# COMPONENTE</h1>
-  <section>
-    <details class="acordeon">
-      <summary class="titulo">titulo1</summary>
-      <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-    <details class="acordeon">
-      <summary class="titulo">titulo2</summary>
-      <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-    <details class="acordeon">
-      <summary class="titulo">titulo3</summary>
-      <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-    <details class="acordeon">
-      <summary class="titulo">titulo4</summary>
-      <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-  </section>
-  <section>
-    <details class="acordeon2">
-      <summary class="titulo2">titulo1</summary>
-      <p class="texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-    <details class="acordeon2">
-      <summary class="titulo2">titulo2</summary>
-      <p class="texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-    <details class="acordeon2">
-      <summary class="titulo2">titulo3</summary>
-      <p class="texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-    <details class="acordeon2">
-      <summary class="titulo2">titulo4</summary>
-      <p class="texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-  </section>
-  <section>
-    <details class="acordeon3">
-      <summary class="titulo3">titulo1</summary>
-      <p class="texto3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-    <details class="acordeon3">
-      <summary class="titulo3">titulo2</summary>
-      <p class="texto3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-    <details class="acordeon3">
-      <summary class="titulo3">titulo3</summary>
-      <p class="texto3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-    <details class="acordeon3">
-      <summary class="titulo3">titulo4</summary>
-      <p class="texto3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-  </section>
-  <section>
-    <details class="acordeon4">
-      <summary class="titulo4">titulo1</summary>
-      <p class="texto4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-    <details class="acordeon4">
-      <summary class="titulo4">titulo2</summary>
-      <p class="texto4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-    <details class="acordeon4">
-      <summary class="titulo4">titulo3</summary>
-      <p class="texto4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-    <details class="acordeon4">
-      <summary class="titulo4">titulo4</summary>
-      <p class="texto4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
-    </details>
-  </section>
   <section class="acordeon">
     <details class="acordeon__item">
-      <summary class="acordeon__titulo acordeon__titulo--special">titulo1</summary>
-      <p class="acordeon__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+      <summary class="acordeon__titulo acordeon__titulo--centrar">titulo1</summary>
+      <p class="acordeon__texto acordeon__texto--centrar2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
     </details>
     <details class="acordeon__item">
-      <summary class="acordeon__titulo">titulo2</summary>
-      <p class="acordeon__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+      <summary class="acordeon__titulo acordeon__titulo--cambio2">titulo2</summary>
+      <p class="acordeon__texto acordeon__texto--cambio3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
     </details>
-    <!-- Otros elementos -->
+    <details class="acordeon__item">
+      <summary class="acordeon__titulo acordeon__titulo--focus">titulo2</summary>
+      <p class="acordeon__texto acordeon__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
+    <details class="acordeon__item">
+      <summary class="acordeon__titulo acordeon__titulo--color">titulo2</summary>
+      <p class="acordeon__texto acordeon__texto--color2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+    </details>
   </section>
   <br>
   <br>
@@ -99,45 +34,57 @@
   <h1>2# COMPONENTE</h1>
   <div class="contenedor">
     <div class="card">
-      <img src="img/amogus 2.gif" alt="pato" class="card__img">
-      <h1 class="card__titulo">Carta1</h1>
+      <img src="img/amogus 2.gif" alt="amogus" class="card__img">
+      <h1 class="card__titulo card__titulo--zoom">Carta1</h1>
       <p class="card__texto">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, corporis.
       </p>
       <a href="a" class="boton boton--negro">Info</a>
     </div>
-    <div class="card">
+    <div class="card card--gradiantes">
       <img src="img/pato.gif" alt="pato" class="card__img">
       <h1 class="card__titulo">Carta2</h1>
       <p class="card__texto">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, corporis.
       </p>
-      <a href="a" class="boton boton--rojo">Info</a>
+      <a href="a" class="boton boton--gradiantes">Info</a>
     </div>
     <div class="card">
-      <img src="img/banana.gif" alt="pato" class="card__img">
+      <img src="img/banana.gif" alt="banana" class="card__img card__img--sombra">
       <h1 class="card__titulo">Carta3</h1>
       <p class="card__texto">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, corporis.
       </p>
       <a href="a" class="boton boton--sombra">Info</a>
     </div>
-    <div class="card">
-      <img src="img/maica.gif" alt="pato" class="card__img">
-      <h1 class="card__titulo-">Carta4</h1>
+    <div class="card card--relleno">
+      <img src="img/maica.gif" alt="maica" class="card__img">
+      <h1 class="card__titulo">Carta4</h1>
       <p class="card__texto">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, corporis.
       </p>
-      <a href="a" class="boton boton--azul">Info</a>
+      <a href="a" class="boton boton--relleno">Info</a>
     </div>
   </div>
   <h1>3# COMPONENTE</h1>
-  <div class="lista">
-    <button class="lista__primera">1</button>
-    <button class="lista__segunda">2</button>
-    <button class="lista__tercera">3</button>
-    <button class="lista__cuarta">4</button>
+  <div class="numeros">
+    <button class="numeros__item numeros__item--modi1">1</button>
+    <button class="numeros__item numeros__item--modi2">2</button>
+    <button class="numeros__item numeros__item--modi3">3</button>
+    <button class="numeros__item numeros__item--modi4">4</button>
   </div>
+  <br>
+  <br>
+  <br>
+  <h1>4# COMPONENTE</h1>
+  <ul class="lista">
+    <li class="lista__item lista__item--mod1">contenido 1</li>
+    <li class="lista__item lista__item--mod2">contenido 2</li>
+    <li class="lista__item lista__item--mod3">contenido 3</li>
+    <li class="lista__item lista__item--mod4">contenido 4</li>
+    <li class="lista__item lista__item--mod5">contenido 5</li>
+  </ul>
+
 </body>
 
 </html>
