--- a/index.html
+++ b/index.html
@@ -13,19 +13,24 @@
   <section class="acordeon">
     <details class="acordeon__item">
       <summary class="acordeon__titulo acordeon__titulo--centrar">titulo1</summary>
-      <p class="acordeon__texto acordeon__texto--centrar2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+      <p class="acordeon__texto acordeon__texto--centrar2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Numquam, veniam.</p>
     </details>
     <details class="acordeon__item">
-      <summary class="acordeon__titulo acordeon__titulo--cambio2">titulo2</summary>
-      <p class="acordeon__texto acordeon__texto--cambio3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+      <summary class="acordeon__titulo acordeon__titulo--cambio_hover">titulo2</summary>
+      <p class="acordeon__texto acordeon__texto--cambio_hover2">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Numquam, veniam.</p>
     </details>
     <details class="acordeon__item">
       <summary class="acordeon__titulo acordeon__titulo--focus">titulo2</summary>
-      <p class="acordeon__texto acordeon__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+      <p class="acordeon__texto acordeon__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam,
+        veniam.</p>
     </details>
     <details class="acordeon__item">
-      <summary class="acordeon__titulo acordeon__titulo--color">titulo2</summary>
-      <p class="acordeon__texto acordeon__texto--color2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, veniam.</p>
+      <summary class="acordeon__titulo acordeon__titulo--color_gradiante">titulo2</summary>
+      <p class="acordeon__texto acordeon__texto--color_gradiante2">Lorem ipsum dolor sit amet consectetur adipisicing
+        elit.
+        Numquam, veniam.</p>
     </details>
   </section>
   <br>
@@ -39,7 +44,7 @@
       <p class="card__texto">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, corporis.
       </p>
-      <a href="a" class="boton boton--negro">Info</a>
+      <a href="a" class="boton boton--zoom">Info</a>
     </div>
     <div class="card card--gradiantes">
       <img src="img/pato.gif" alt="pato" class="card__img">
@@ -57,8 +62,8 @@
       </p>
       <a href="a" class="boton boton--sombra">Info</a>
     </div>
-    <div class="card card--relleno">
-      <img src="img/maica.gif" alt="maica" class="card__img">
+    <div class="card card--relleno_gradiante">
+      <img src="img/maica.gif" alt="maica" class="card__img card__img--aumento">
       <h1 class="card__titulo">Carta4</h1>
       <p class="card__texto">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga, corporis.
@@ -68,21 +73,20 @@
   </div>
   <h1>3# COMPONENTE</h1>
   <div class="numeros">
-    <button class="numeros__item numeros__item--modi1">1</button>
-    <button class="numeros__item numeros__item--modi2">2</button>
-    <button class="numeros__item numeros__item--modi3">3</button>
-    <button class="numeros__item numeros__item--modi4">4</button>
+    <button class="numeros__item numeros__item--hover">1</button>
+    <button class="numeros__item numeros__item--gradiante_zoom">2</button>
+    <button class="numeros__item numeros__item--cambio_gradiante">3</button>
+    <button class="numeros__item numeros__item--efecto">4</button>
   </div>
   <br>
   <br>
   <br>
   <h1>4# COMPONENTE</h1>
   <ul class="lista">
-    <li class="lista__item lista__item--mod1">contenido 1</li>
-    <li class="lista__item lista__item--mod2">contenido 2</li>
-    <li class="lista__item lista__item--mod3">contenido 3</li>
-    <li class="lista__item lista__item--mod4">contenido 4</li>
-    <li class="lista__item lista__item--mod5">contenido 5</li>
+    <li class="lista__item lista__item--efecto_derecha">contenido 1</li>
+    <li class="lista__item lista__item--efecto_centro">contenido 2</li>
+    <li class="lista__item lista__item--efecto_elevar">contenido 3</li>
+    <li class="lista__item lista__item--efecto_diagonal">contenido 4</li>
   </ul>
 
 </body>
