--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
     <li class="lista__item lista__item--efecto_centro">contenido 2</li>
     <li class="lista__item lista__item--efecto_elevar">contenido 3</li>
     <li class="lista__item lista__item--efecto_diagonal">contenido 4</li>
+    <li class="lista__item lista__item--efecto_diagonal">contenido 4</li>
   </ul>
 
 </body>
